--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
+    "mysql2": "^3.11.3",
     "nodemon": "^3.1.7"
   }
 }
