--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.5.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3"
   }
