--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -20,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.5.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3"
   }
